--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@granite-elements/granite-lit-bootstrap",
   "description": "Wrapping of *Bootstrap CSS* as a LitElement CSS TemplateResult to be used in LitElement web components",
   "main": "granite-bootstrap-min.js",
+  "module": "granite-bootstrap-min.js",
   "author": "Horacio Gonzalez <horacio.gonzalez@gmail.com>",
   "license": "Apache 2.0",
   "repository": {
@@ -16,7 +17,7 @@
   "scripts": {
     "prepare": "node ./scripts/granite-css-modularizer.js ./node_modules/bootstrap/dist/css ."
   },
-  "version": "4.3.1-0",
+  "version": "4.3.1-1",
   "devDependencies": {
     "fs-extra": "^8.0.1",
     "klaw": "^3.0.0"
