--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   "scripts": {
     "prepare": "node ./scripts/granite-css-modularizer.js ./node_modules/bootstrap/dist/css ."
   },
-  "version": "4.3.1-2",
+  "version": "4.3.1-3",
   "devDependencies": {
     "fs-extra": "^8.0.1",
-    "klaw": "^3.0.0"
+    "klaw": "^3.0.0",
+    "@polymer/iron-demo-helpers": "^3.0.2",
+    "@webcomponents/webcomponentsjs": "^2.1.3",
+    "wct-browser-legacy": "^1.0.0"
   }
 }
