--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   },
   "homepage": "https://github.com/lostinbrittany/granite-lit-bootstrap",
   "dependencies": {
-    "lit-element": "^2.1.0",
-    "bootstrap": "4.3.1"
+    "bootstrap": "4.5.0",
+    "lit-element": "^2.3.0"
   },
   "scripts": {
-    "prepare": "node ./scripts/granite-css-modularizer.js ./node_modules/bootstrap/dist/css ."
+    "prepare": "node ./scripts/granite-css-modularizer.js ./node_modules/bootstrap/dist/css .",
+    "serve": "npx es-dev-server --node-resolve --watch"
   },
-  "version": "4.3.1-4",
+  "version": "4.5.0-1",
   "devDependencies": {
-    "fs-extra": "^8.0.1",
-    "klaw": "^3.0.0",
-    "@polymer/iron-demo-helpers": "^3.0.2",
-    "@webcomponents/webcomponentsjs": "^2.1.3",
-    "wct-browser-legacy": "^1.0.0"
+    "@webcomponents/webcomponentsjs": "^2.4.3",
+    "es-dev-server": "^1.56.1",
+    "fs-extra": "^9.0.0",
+    "klaw": "^3.0.0"
   }
 }
