--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@webcomponents/webcomponentsjs": "^2.4.3",
     "es-dev-server": "^1.56.1",
     "fs-extra": "^9.0.0",
-    "klaw": "^3.0.0"
+    "klaw": "^3.0.0",
+    "minimist": "^1.2.5"
   }
 }
